--- a/TP-Basket.ipynb
+++ b/TP-Basket.ipynb
@@ -62,6 +62,7 @@
     "from vecteur import Vecteur                                                                   #ne pas modifier       Ligne1\n",
     "from modelisation import Modelisation                                                         #ne pas modifier       Ligne2\n",
     "from fonctions import cos, sin  ,tan                                                          #ne pas modifier       Ligne2b\n",
+    "import matplotlib.pyplot as plt                                                               #ne pas modifier       Ligne2t\n",
     "import cv2                                                                                    #ne pas modifier       Ligne3\n",
     "modelisation = Modelisation()                                                                 #ne pas modifier       Ligne4\n",
     "\n",
