--- a/TP-Basket.ipynb
+++ b/TP-Basket.ipynb
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "8aebaceb",
    "metadata": {
     "scrolled": true
@@ -61,15 +61,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(1, 720, 1280, 3)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\pierr\\miniconda3\\lib\\site-packages\\matplotlib\\animation.py:889: UserWarning: Animation was deleted without rendering anything. This is most likely not intended. To prevent deletion, assign the Animation to a variable, e.g. `anim`, that exists until you have outputted the Animation using `plt.show()` or `anim.save()`.\n",
-      "  warnings.warn(\n"
+      "Veuillez Patientez quelques instants...\n",
+      "Votre modélisation va bientôt apparaître ...\n"
      ]
     },
     {
@@ -85,35 +78,35 @@
    ],
    "source": [
     "## ================= SECTION 0 : IMPORTATION DES EXTENSIONS (ne pas modifier) =======================\n",
-    "from vecteur import Vecteur                                                                   #ne pas modifier       Ligne1\n",
-    "from modelisation import Modelisation                                                         #ne pas modifier       Ligne2\n",
-    "from fonctions import cos, sin  ,tan                                                          #ne pas modifier       Ligne2b\n",
-    "import matplotlib.pyplot as plt                                                               #ne pas modifier       Ligne2t\n",
-    "import cv2                                                                                    #ne pas modifier       Ligne3\n",
-    "modelisation = Modelisation()                                                                 #ne pas modifier       Ligne4\n",
+    "from vecteur import Vecteur                                                                   #ne pas modifier        Ligne1\n",
+    "from modelisation import Modelisation                                                         #ne pas modifier        Ligne2\n",
+    "from fonctions import cos, sin  ,tan                                                          #ne pas modifier        Ligne2b\n",
+    "import matplotlib.pyplot as plt                                                               #ne pas modifier        Ligne2t\n",
+    "import cv2                                                                                    #ne pas modifier        Ligne3\n",
+    "modelisation = Modelisation()                                                                 #ne pas modifier        Ligne4\n",
     "\n",
     "\n",
     "#===================SECTION 1 : POSITION INITIALE DU BALON (x, y) =========================\n",
-    "x  =  8           # Position initiale (en m) du ballon (regarde les indices du polycopié !)           (A COMPLETER)  Ligne5\n",
-    "y  =   4          # Position initiale (en m) du ballon (regarde les indices du polycopié !)           (A COMPLETER)  Ligne6\n",
-    "OM = Vecteur(x,y) # vecteur position initial                                                  #ne pas modifier       Ligne7\n",
+    "x  =  8           # Position initiale (en m) du ballon (regarde les indices du polycopié !)           (A COMPLETER)   Ligne5\n",
+    "y  =   4          # Position initiale (en m) du ballon (regarde les indices du polycopié !)           (A COMPLETER)   Ligne6\n",
+    "OM = Vecteur(x,y) # vecteur position initial                                                  #ne pas modifier        Ligne7\n",
     "\n",
     "#===================SECTION 2 : VITESSE INITIALE DU BALLON (vx, vy) =========================\n",
-    "vx =  -7.55*cos(55)   # vitesse initiale en m/s (composante suivant l'axe des x)                      (A COMPLETER)  Ligne8\n",
-    "vy =   7.55*sin(55)   # vitesse initiale en m/s (composante suivant l'axe des y)                      (A COMPLETER)  Ligne9\n",
-    "v = Vecteur(vx,vy) # Vecteur vitesse                                                          #ne pas modifier       Ligne10\n",
+    "vx =  -7.55*cos(55)   # vitesse initiale en m/s (composante suivant l'axe des x)                      (A COMPLETER)   Ligne8\n",
+    "vy =   7.55*sin(55)   # vitesse initiale en m/s (composante suivant l'axe des y)                      (A COMPLETER)   Ligne9\n",
+    "v = Vecteur(vx,vy) # Vecteur vitesse                                                          #ne pas modifier        Ligne10\n",
     "\n",
     "#===================SECTION 3 : BILAN DES FORCES EXERCEES SUR LE BALLON =========================\n",
-    "m = 0.600   #masse du ballon de basket en kg                                                          (A COMPLETER)  Ligne11\n",
-    "g = 9.81   #Intensité de pesanteur en N/kg                                                            (A COMPLETER)  Ligne12\n",
+    "m = 0.600   #masse du ballon de basket en kg                                                          (A COMPLETER)   Ligne11\n",
+    "g = 9.81   #Intensité de pesanteur en N/kg                                                            (A COMPLETER)   Ligne12\n",
     "\n",
-    "F_x = 0       # Force résultante en N (composante suivant l'axe des x)                                (A COMPLETER)  Ligne13\n",
-    "F_y = -m*g       # Force résultante en N (composante suivant l'axe des y)                             (A COMPLETER)  Ligne14\n",
-    "F   = Vecteur(F_x ,F_y ) # Vecteur force résultante                                                  (A COMPLETER)  Ligne15\n",
+    "F_x = 0       # Force résultante en N (composante suivant l'axe des x)                                (A COMPLETER)   Ligne13\n",
+    "F_y = -m*g       # Force résultante en N (composante suivant l'axe des y)                             (A COMPLETER)   Ligne14\n",
+    "F   = Vecteur(F_x ,F_y ) # Vecteur force résultante                                                   (A COMPLETER)   Ligne15\n",
     "\n",
-    "modelisation.stockeInfo(OM,v,F)   #Affichage des résultats                                          #ne pas modifier       Ligne16\n",
-    "modelisation.anima()\n",
-    "\n",
+    "modelisation.stockeInfo(OM,v,F)   #Affichage des résultats                                          #ne pas modifier  Ligne16\n",
+    "anim = modelisation.anima()                                                                         #ne pas modifier  Ligne17\n",
+    "plt.show()\n",
     "\n",
     "#===================SECTION 4 : Sauvegarde des paramètres NE PAS MODIFIER =========================\n",
     "OMi =OM  #sauvegarde du vecteur position initiale dans la variable \"OMi\"                      #ne pas modifier       Ligne17                        \n",
@@ -160,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "33c97e68",
    "metadata": {
     "scrolled": true
@@ -170,7 +163,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(39, 720, 1280, 3)\n"
+      "Veuillez Patientez quelques instants...\n",
+      "Votre modélisation va bientôt apparaître ...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\pierr\\miniconda3\\lib\\site-packages\\matplotlib\\animation.py:889: UserWarning: Animation was deleted without rendering anything. This is most likely not intended. To prevent deletion, assign the Animation to a variable, e.g. `anim`, that exists until you have outputted the Animation using `plt.show()` or `anim.save()`.\n",
+      "  warnings.warn(\n"
      ]
     },
     {
@@ -190,20 +192,20 @@
     "F  = Fi                                                                                   #ne pas modifier         Ligne21\n",
     "v  = vi                                                                                   #ne pas modifier         Ligne22\n",
     "modelisation = Modelisation()                                                             #ne pas modifier         Ligne23\n",
-    "modelisation.stockeInfo(OM,v,F)                                                                 #ne pas modifier         Ligne24\n",
+    "modelisation.stockeInfo(OM,v,F)                                                           #ne pas modifier         Ligne24\n",
     "\n",
     "#=====================SECTION B- CALCUL DES POSITIONS ET VITESSES SUIVANTES GRACE A LA SECONDE LOI DE NEWTON\n",
     "\n",
     "deltat = 40e-3  #durée (en seconde) entre 2 images successives                            (A COMPLETER)            Ligne25\n",
     "\n",
     "for i in range(38): #On répète pour les 38 images de la vidéos       #ne pas modifier                              Ligne26\n",
-    "    v = v + deltat*F/m               # vitesse suivante = vitesse précédente + ......... # (A COMPLETER)           Ligne27\n",
+    "    v = v + deltat*F/m               # vitesse suivante = vitesse précédente + ......... #   (A COMPLETER)         Ligne27\n",
     "    \n",
     "    OM = OM + v*deltat               # position suivante = position précédente + ......... # (A COMPLETER)         Ligne28                                          \n",
     "    \n",
-    "    modelisation.stockeInfo(OM,v,F) # stocke les nouvelles infos (position, vitesse, force)(ne pas modifier)           Ligne29\n",
-    "anim = modelisation.anima()\n",
-    "plt.show()"
+    "    modelisation.stockeInfo(OM,v,F) # stocke les nouvelles infos (position, vitesse, force)(ne pas modifier)       Ligne29\n",
+    "anim = modelisation.anima()         # construit l'animation                                (ne pas modifier)       Ligne30\n",
+    "plt.show()                          # affiche l'animation                                  (ne pas modifier)       Ligne31"
    ]
   },
   {
@@ -245,14 +247,14 @@
     "\n",
     "#=====================SECTION B- CALCUL DES POSITIONS ET VITESSES SUIVANTES GRACE A LA SECONDE LOI DE NEWTON\n",
     "\n",
-    "deltat = 40e-3  #durée (en seconde) entre 2 images successives                            (A COMPLETER IDENTIQUE A PARTIE 2)          \n",
+    "deltat = 40e-3  #durée (en seconde) entre 2 images successives                              (A COMPLETER IDENTIQUE A PARTIE 2)          \n",
     "\n",
-    "for i in range(38): #On répète pour les 38 images de la vidéos       #ne pas modifier\n",
-    "    v = v + deltat*F/m               # vitesse suivante = vitesse précédente + ......... # (A COMPLETER IDENTIQUE A PARTIE 2) \n",
+    "for i in range(38): #On répète pour les 38 images de la vidéos                             #ne pas modifier\n",
+    "    v = v + deltat*F/m               # vitesse suivante = vitesse précédente + .........   #(A COMPLETER IDENTIQUE A PARTIE 2) \n",
     "    \n",
-    "    OM = OM + v*deltat               # position suivante = position précédente + ......... # (A COMPLETER IDENTIQUE A PARTIE 2)                                                  \n",
+    "    OM = OM + v*deltat               # position suivante = position précédente + ......... #(A COMPLETER IDENTIQUE A PARTIE 2)                                                  \n",
     "    \n",
-    "    modelisation.show(OM,v,F) # Affichage des positions successives                    (ne pas modifier)"
+    "    modelisation.show(OM,v,F)        # Affichage des positions successives                 #ne pas modifier"
    ]
   }
  ],
