--- a/TP-Basket.ipynb
+++ b/TP-Basket.ipynb
@@ -77,8 +77,8 @@
     "F_y = -m*g       # Force résultante en N (composante suivant l'axe des y)                             (A COMPLETER)   Ligne14\n",
     "F   = Vecteur(F_x ,F_y ) # Vecteur force résultante                                                   (A COMPLETER)   Ligne15\n",
     "\n",
-    "modelisation.stockeInfo(OM,v,F)   #Affichage des résultats                                     #ne pas modifier       Ligne16\n",
-    "anim = modelisation.anima()                                                                    #ne pas modifier       Ligne17\n",
+    "modelisation.stockeInfo(OM,v,F)   #Stockes les informations (position, vitesse, Force)          #ne pas modifier       Ligne16\n",
+    "anim = modelisation.anima()       #Crée l'animation                                                             #ne pas modifier       Ligne17\n",
     "plt.show()\n",
     "\n",
     "#===================SECTION 4 : Sauvegarde des paramètres NE PAS MODIFIER =========================\n",
@@ -104,7 +104,7 @@
    "id": "1e701639",
    "metadata": {},
    "source": [
-    "<b>Travail 3 :</b> Vérifie que sur l'image qui est apparue, le vecteur vitesse et le vecteur force sont correctement positionnés. Si ce n'est pas le cas, tu as fait une erreur dans le code..."
+    "<b>Travail 3 :</b> Attends quelques que secondes que l'image apparaissent puis vérifie que le vecteur vitesse et le vecteur force sont correctement positionnés. Si ce n'est pas le cas, tu as fait une erreur dans le code..."
    ]
   },
   {
