--- a/TP-Basket.ipynb
+++ b/TP-Basket.ipynb
@@ -77,9 +77,9 @@
     "F_y = -m*g       # Force résultante en N (composante suivant l'axe des y)                             (A COMPLETER)   Ligne14\n",
     "F   = Vecteur(F_x ,F_y ) # Vecteur force résultante                                                   (A COMPLETER)   Ligne15\n",
     "\n",
-    "modelisation.stockeInfo(OM,v,F)   #Stockes les informations (position, vitesse, Force)          #ne pas modifier       Ligne16\n",
-    "anim = modelisation.anima()       #Crée l'animation                                                             #ne pas modifier       Ligne17\n",
-    "plt.show()\n",
+    "modelisation.stockeInfo(OM,v,F)   #Stockes les informations (position, vitesse, Force)          #ne pas modifier      Ligne16\n",
+    "anim = modelisation.anima()       #Crée l'animation                                             #ne pas modifier      Ligne17\n",
+    "plt.show()                        #Affiche l'animation                                          #ne pas modifier      Ligne17b\n",
     "\n",
     "#===================SECTION 4 : Sauvegarde des paramètres NE PAS MODIFIER =========================\n",
     "OMi =OM  #sauvegarde du vecteur position initiale dans la variable \"OMi\"                      #ne pas modifier       Ligne18                        \n",
@@ -189,7 +189,7 @@
     "F  = Fi +Vecteur(0,-m*g/10)  #Ajouter la force de frottement de l'air                         (A COMPLETER)\n",
     "v  = vi                                                                                   #ne pas modifier\n",
     "modelisation = Modelisation()                                                             #ne pas modifier\n",
-    "modelisation.stockeInfo(OM,v,F)                                                                 #ne pas modifier \n",
+    "modelisation.stockeInfo(OM,v,F)                                                           #ne pas modifier \n",
     "\n",
     "#=====================SECTION B- CALCUL DES POSITIONS ET VITESSES SUIVANTES GRACE A LA SECONDE LOI DE NEWTON\n",
     "\n",
